--- a/packages/frontend/src/assets/_variables.scss
+++ b/packages/frontend/src/assets/_variables.scss
@@ -5,7 +5,7 @@ $primary: #ab19ff;
 $secondary: #a2a2a2;
 $light: #fff;
 $success: #33ff00;
-$warning: #ff5c00;
+$danger: #ff5c00;
 $link-color: #fff;
 $dark: #000;
 
